<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="label_imc">IMC</string>
    <string name="tmb">TMB</string>
    <string name="weight">peso (kg)</string>
    <string name="height">altura (cm)</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="calc">Calcular</string>
    <string name="fields_message">Os campos devem ser preenchidos e diferente de zero</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="cancel">Cancelar</string>

    <!-- receiving dynamic props into your string -->
    <string name="imc_response">Imc: %1$.2f</string>
    <!-- each prop is referenced it with %1$, %2$, %3$ (...)  -->
    <!--
        integer prop: d
        double prop: .2f - where 2 means 2 floating points, such as: 32,00
        string prop: s
     -->

    <string name="list_response">Resultado: %1$.2f, Data: %2$s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>